@startuml
skinparam backgroundColor #FAFAFA
skinparam classAttributeIconSize 0
skinparam classFontSize 14
skinparam classFontColor #000000

title Core Models for RAG System

' --- Base Classes ---
class TimeStampedModel {
  + created_at : DateTime
  + updated_at : DateTime
}

class UUIDModel {
  + id : UUID
}

class BaseModel {
  + created_at : DateTime
  + updated_at : DateTime
  + id : UUID
}

' --- User-Owned and Shared Models ---
class UserOwnedModel {
  + owner : User
}

class SharedModel {
  + shared_with : List<User>
  + is_public : Boolean
  + can_access(user) : Boolean
  + can_edit(user) : Boolean
}

' --- Versioning Model ---
class VersionedModel {
  + version : Integer
  + is_active : Boolean
  + create_new_version() : VersionedModel
}

' --- Processing Status Model ---
class StatusChoices {
  <<enumeration>>
  PENDING = 'pending'
  PROCESSING = 'processing'
  COMPLETED = 'completed'
  FAILED = 'failed'
  CANCELLED = 'cancelled'
}

class ProcessingStatusModel {
  + status : String
  + status_message : String
  + processing_started_at : DateTime
  + processing_completed_at : DateTime
  + mark_processing(message) : void
  + mark_completed(message) : void
  + mark_failed(message) : void
}

' --- Metadata Model ---
class MetadataModel {
  + metadata : JSON
  + get_metadata(key, default) : Any
  + set_metadata(key, value) : void
  + update_metadata(data) : void
}

' --- Soft Delete Model ---
class SoftDeleteManager {
  + get_queryset() : QuerySet
  + all_with_deleted() : QuerySet
  + deleted_only() : QuerySet
}

class SoftDeleteModel {
  + is_deleted : Boolean
  + deleted_at : DateTime
  + delete() : void
  + hard_delete() : void
  + restore() : void
}

' --- Relationships ---
BaseModel <|-- TimeStampedModel
BaseModel <|-- UUIDModel
UserOwnedModel <|-- BaseModel
SharedModel <|-- UserOwnedModel
VersionedModel <|-- BaseModel
ProcessingStatusModel <|-- BaseModel
MetadataModel <|-- BaseModel
SoftDeleteModel <|-- BaseModel

' --- SoftDeleteManager relationship ---
SoftDeleteModel --> SoftDeleteManager

@enduml
